--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,25 @@
 {
-    "builds":[{
-      "src": "backend/wsgi.py",
-      "use": "@vercel/python",
-      "config": {"maxLambdaSize": "15mb" , "runtime":"python3.9"}
-    }],
-    "routes":[
+    "version": 2,
+    "builds": [
       {
-        "src":"/media/(.*)",
-        "dest":"/media/$1"
+        "src": "build.sh",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "staticfiles" }
       },
       {
-        "src":"/(.*)",
-        "dest":"backend/wsgi.py"
+        "src": "backend/wsgi.py",
+        "use": "@vercel/python",
+        "config": {"maxLabdaSize": "15mb" , "runtime":"python3.9"}
+      }
+    ],
+    "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "backend/wsgi.py"
       }
     ]
   }
